convert/objects/EndPoint__mdt.object
<CustomObject>
    <label>EndPoint</label>
    <pluralLabel>EndPoints</pluralLabel>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>